# RIHVR---Regularized-Inverse-Holographic-Volume-Reconstruction

./: README.md
src/QTGUI/: CMakeLists.txt  Resources.qrc  bgcompute.cpp  bgcompute.h  main.cpp  reconstructioncompute.cpp  reconstructioncompute.h  rihvr.cpp  rihvr.h  rihvr.ui  samplefunction.txt  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  trackingcompute.cpp  trackingcompute.h  tracksplot.cpp  tracksplot.h  visualizationutils.cpp  visualizationutils.h
src/QTGUI/Icons/: resources.aps  resources.rc
src/core/: Makefile  XGetopt.c  blob3d.cu  blob3d.h  ccbg.cpp  compressive_holo.cu  compressive_holo.h  cumat.cu  cumat.h  deconvolution.cu  deconvolution.h  focus_metric.cu  focus_metric.h  getopt.h  holo_sequence.cu  holo_sequence.h  holo_ui.cpp  holo_ui.h  hologram.cu  hologram.h  install.bat  main_create_background.cu  main_segmentation.cu  main_sparse_inverse.cu  object_cloud.cu  object_cloud.h  opencv_float2_traits.h  optical_field.cu  optical_field.h  particle_extraction.cu  particle_extraction.h  particletracking.cpp  point_cloud.cu  point_cloud.h  point_cloud_3d.cu  point_cloud_3d.h  reconstruction.cu  reconstruction.h  sparse_compressive_holo.cu  sparse_compressive_holo.h  (+9 more)
src/core/Test/: test.cu  test.h
